# atomtex_spe_file

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  flake.nix  shell.nix
.github/workflows/: main.yml
atomtex_spe_file/: CMakeLists.txt
atomtex_spe_file/include/atomtex_spe_file/: measurement.hpp  spe_file.hpp  utf16le_file.hpp
atomtex_spe_file/src/: lines.hpp  measurement.cpp  spe_file.cpp  utf16le_file.cpp  utf16le_file.hpp
atomtex_spe_file_cli/: CMakeLists.txt  main.cpp  run.cpp  run.hpp
benchmark/: CMakeLists.txt  spe_file_benchmark.cpp
conan/profiles/: default-clang  mingw64  native
tests/: CMakeLists.txt
tests/fuzzing-tests/: CMakeLists.txt  lines_fuzzing_test.cpp  spe_file_cli_fuzzing_test.cpp  spe_file_fuzzing_test.cpp
tests/integration-tests/: CMakeLists.txt  cli_test.cpp  spe_file_test.cpp
tests/integration-tests/data/: example.spe
tests/unit-tests/: CMakeLists.txt  lines_test.cpp  measurement_test.cpp  utf16le_file_test.cpp
