add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unit-tests)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/integration-tests)
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fuzzing-tests)
else ()
    message(WARNING "Skipping fuzzing tests, need Clang to build them")
endif ()
